--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
 <html>
 <head>
-<title>My Personal Website</title>
+<title>Our Funky HTML Page</title>
+<meta name="description" content="Our First Page">
 </head>
 <body>
-<p>Hello!My Name is Elliot Murrell, but everyone calls me Luke</p>
-<p>About me: Senior at UCSC, marine biology major </p>
+<h1> Welcome to my HTML page</h1>
+<p>Hello! My Name is Elliot Murrell, but everyone calls me Luke. 
+I am a marine biology major at UCSC in my senior year </p>
+<a href="https://github.com/Lukemur" target="blank"> My Github </a>
+<h2>Projects</h2>
+<dl>
+    <dt> <a href="http://github.com/Lukemur" target="blank>"
+    >Sporophyte density and urchin grazing rates</a></dt>
+    <dd>R studios code for statistical anaylsis for sporophyte density and urchin grazing rates</dd>
+</dl>
 </body>
 </html>
