--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1> Welcome to my HTML page</h1>
 <p>Hello! My Name is Elliot Murrell, but everyone calls me Luke. 
-I am a marine biology major at UCSC in my senior year </p>
+I am a marine biology major at UCSC in my senior year. </p>
 <a href="https://github.com/Lukemur" target="blank"> My Github </a>
 <h2>Projects</h2>
 <dl>
