--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <title>Our Funky HTML Page</title>
     <meta name="description" content="Our First Page">
+    <link rel="stylesheet" href="mystyle.css"/>
 </head>
+<section class="website">
 <body>
-    <h1> Welcome to my HTML page</h1>
-    <p>Hello! My Name is Elliot Murrell, but everyone calls me Luke.
+    <h1 class="main-header"> Welcome to my HTML page</h1> <!--added "mainheader" class to header 1-->
+    <p class="introduction" id="main-text">Hello! My Name is Elliot Murrell, but everyone calls me Luke.
     I am a marine biology major at UCSC in my senior year.</p>
-    <a href="https://github.com/Lukemur" target="blank"> <img src="github.png" alt="GitHub Link" width="200" height="200"> </a>
+    <a href="https://github.com/Lukemur" target="blank"> <img class="icon" id="githublink" src="github.png" alt="GitHub Link" width="200" height="200" class="click-link"> </a>
+    <a href="https://www.instagram.com/luke___murrell/" target="blank"> <img class="icon" src="ig.png" alt="Instagram Link" width="200" height="200" class="click-link"></a>
+    <a href="https://www.linkedin.com/in/elliot-murrell-5443741b8/" target="blank"> <img class="icon" src="in.png" alt="Linkedin Link" width="200" height="200" class="click-link"></a>
     <h2>Projects</h2>
     <dl>
         <dt> <a href="http://github.com/Lukemur" target="blank>"
@@ -17,4 +21,5 @@
         <dd>R studios code for statistical anaylsis for sporophyte density and urchin grazing rates</dd>
     </dl>
 </body>
+</section>
 </html>
