Added span elements to UCSC, created flex containers for formating

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="description" content="Our First Page">
     <link rel="stylesheet" href="mystyle.css"/>
 </head>
-<section class="website">
 <body>
     <h1 class="main-header"> Welcome to my HTML page</h1> <!--added "mainheader" class to header 1-->
-    <p class="introduction" id="main-text">Hello! My Name is Elliot Murrell, but everyone calls me Luke.
-    I am a marine biology major at UCSC in my senior year.</p>
-    <a href="https://github.com/Lukemur" target="blank"> <img class="icon" id="githublink" src="github.png" alt="GitHub Link" width="200" height="200" class="click-link"> </a>
-    <a href="https://www.instagram.com/luke___murrell/" target="blank"> <img class="icon" src="ig.png" alt="Instagram Link" width="200" height="200" class="click-link"></a>
-    <a href="https://www.linkedin.com/in/elliot-murrell-5443741b8/" target="blank"> <img class="icon" src="in.png" alt="Linkedin Link" width="200" height="200" class="click-link"></a>
+    <section id="flexgroup">
+    <section id="NM">
+    <p class="intro" id="main-text">Hello! My Name is Elliot Murrell, but everyone calls me Luke.
+    I am a marine biology major at <span class="U">U</span><span class="C">C</span><span class="S">S</span><span class="C">C</span> in my senior year.</p>
+    <section class="projects">
     <h2>Projects</h2>
     <dl>
         <dt> <a href="http://github.com/Lukemur" target="blank>"
@@ -20,6 +19,19 @@
 
         <dd>R studios code for statistical anaylsis for sporophyte density and urchin grazing rates</dd>
     </dl>
+</section class = "projects">
+</section class = "NM"> 
+    <div class="image-column"
+    <a href="https://github.com/Lukemur" target="blank"> <img class="icon" id="githublink" src="github.png" alt="GitHub Link" width="200" height="200" class="click-link"> </a>
+    <a href="https://www.instagram.com/luke___murrell/" target="blank"> <img class="icon" src="ig.png" alt="Instagram Link" width="200" height="200" class="click-link"></a>
+    <a href="https://www.linkedin.com/in/elliot-murrell-5443741b8/" target="blank"> <img class="icon" src="in.png" alt="Linkedin Link" width="200" height="200" class="click-link"></a>
+    <section id="flexgroup">
+</div>
+<section class="contactme">
+    <h1> Contact Me!</h1>
+    <p>(202) 309 7477</p>
+    <p>Emurrell@ucsc.edu</p>
+    </
+</p>
 </body>
-</section>
 </html>
