--- a/FinalProject/Index.html
+++ b/FinalProject/Index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Stock Spotter</title>
-    <meta name="description" content="Our Final Project">
-    <link rel="stylesheet" href="style.css"/>
-    </head>
-    <body>
-        <h1 class="main-header"> STOCK SPOTTER</h1>
-        <img src="logo.jpg" alt="stockspotterlogo" width="100px" height="px">
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>JavaScript Stock Chart</title>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-stock.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-data-adapter.min.js"></script>
+
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-ui.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-exports.min.js"></script>
+
+    <link href="https://cdn.anychart.com/releases/8.11.0/css/anychart-ui.min.css" type="text/css" rel="stylesheet">
+    <link href="https://cdn.anychart.com/releases/8.11.0/fonts/css/anychart-font.min.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>  
+    <h1 class="title">STOCK SPOTTER</h1>
+    <img src="logo.jpg" alt="stockspotterlogo" height="100px" width="100px">
+    <div id="container"></div>
+    <script src="script.js"></script>
+  </body>
 </html>
